Align header correctly

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 .top-nav-inner {
   width: 860px;
   margin: 0 auto;
-  padding-left: 688px;
+  padding-left: 690px;
 }
 
 .top-nav a {
